@@ -1,4 +1,6 @@
 /**
  * Provides classes related to endpoint management.
  */
+@org.springframework.lang.NonNullApi
+@org.springframework.lang.NonNullFields
 package org.springframework.integration.endpoint.management;
