@@ -9,3 +9,4 @@ spring.integration.messagingTemplate.throwExceptionOnLateReply=false
 spring.integration.readOnly.headers=
 spring.integration.endpoints.noAutoStartup=
 spring.integration.endpoints.defaultTimeout=30000
+spring.integration.keepAlive=true
